# sphere-it-workshop

./: .env  .gitpod  02-add-minio-and-dvc.md  Dockerfile.gitpod  Dockerfile.mlflow  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.dvc/: config
config/: training.yaml
notebooks/: train_model.ipynb
scripts/: training.py
src/poc_transform/data/: reviews.py
src/poc_transform/model/: xgb.py
tests/: test_data.py
