[project]
name = "poc-transform"
version = "0.1.0"
description = "Project for sphere.it workshop"
dependencies = [
    "ipython>=8.28.0",
    "jupyterlab>=4.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
    "gdown>=5.2.0",
    "dvc[s3]>=3.56.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/poc_transform"]
